--- a/index.html
+++ b/index.html
@@ -1,12 +1,21 @@
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8" />
-        <title>Webpack App</title>
-    </head>
-    <body>
-        <h1>Hello world!</h1>
-        <h2>Tip: Check your console</h2>
-    </body>
-    
+<html lang="en">
+  <head>
+    <link rel="stylesheet" href="./src/style.css"/>
+    <meta charset="UTF-8">
+    <title>RSS Reader</title>
+    <style>
+     
+    </style>
+  </head>
+  <body>
+     <h1> Create your RSS feed</h1>
+    <form id="input-form">
+      <input type="text" placeholder="Enter RSS link" id="link-input">
+      <button type="submit" id="submit-button">Submit</button>
+    </form>
+    <script href="./src/main.js"> </script>
+  </body>
 </html>
