--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -11,10 +10,10 @@
     </style>
   </head>
   <body>
-     <h1> Create your RSS feed</h1>
+     <h1 id="'page-title"></h1>
     <form id="input-form">
       <input type="text" placeholder="Enter RSS link" id="link-input">
-      <button type="submit" id="submit-button">Submit</button>
+      <button type="submit" id="submit-button"></button>
     </form>
     <script href="./src/main.js"> </script>
   </body>
