--- a/index.html
+++ b/index.html
@@ -10,11 +10,7 @@
     </style>
   </head>
   <body>
-     <h1 id="'page-title"></h1>
-    <form id="input-form">
-      <input type="text" placeholder="Enter RSS link" id="link-input">
-      <button type="submit" id="submit-button"></button>
-    </form>
+    <div id="main-container"> </div>
     <script href="./src/main.js"> </script>
   </body>
 </html>
