popup window added

--- a/index.html
+++ b/index.html
@@ -12,5 +12,12 @@
   <body>
     <div id="main-container"> </div>
     <script href="./src/main.js"> </script>
+    <div class="modal-overlay" id="modalOverlay">
+      <div class="modal-content">
+        <h2 id="popup-title"></h2>
+        <p id="popup-contents"></p>
+        <button id="popup-button">Close</button>
+      </div>
+    </div>
   </body>
 </html>
