css and bootstrap set

--- a/index.html
+++ b/index.html
@@ -1,22 +1,62 @@
-<meta name="viewport" content="width=device-width, initial-scale=1">
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <link rel="stylesheet" href="./src/style.css"/>
+<head>
     <meta charset="UTF-8">
-    <title>RSS Reader</title>
-    <style>
-     
-    </style>
-  </head>
-  <body>
-    <div id="main-container"> </div>
-    <div class="modal-overlay" id="modalOverlay">
-      <div class="modal-content">
-        <h2 id="popup-title"></h2>
-        <p id="popup-contents"></p>
-        <button id="popup-button">Close</button>
-      </div>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="./src/styles.scss">
+    <title>RSS-reader</title>
+</head>
+<body>
+    <main class="flex-grow-1">
+        <section class="container-fluid p-5" id="form-container">
+            <div class="row">
+                <div class="col-md-10 col-lg-8 mx-auto text-white">
+                    <h1 id="rss-header"></h1>
+                    <form action="" class="rss-form text-body" id="input-form">
+                        <div class="row">
+                            <div class="col">
+                                <div class="form-floating">
+                                    <input id="url-input" autofocus="" name="url" aria-label="url" class="form-control w-100" placeholder="ссылка RSS" autocomplete="off"> 
+                                    <label for="url-input"></label>
+                                </div>
+                            </div>
+                            <div class="col-auto">
+                                <button type="submit" aria-label="add" class="h-100" id="add-button"></button>
+                            </div>
+                        </div>
+                    </form>
+                    <p class="" id="example"></p>
+                    <p class="feedback m-0 position-absolute text-danger" id="error-message"></p>
+                </div>
+            </div>
+        </section>
+        <section class="container-fluid container-xxl p-5">
+            <div class="row">
+                <div class="col-md-10 col-lg-8 order-1 mx-auto posts" id="posts"></div>
+                <div class="col-md-10 col-lg-4 mx-auto order-0 order-lg-1 feeds" id="feeds"></div>
+            </div>
+        </section>
+    </main>
+    <div class="modal fade" id="modalOverlay" tabindex="-1" aria-labelledby="modalOverlayLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="modalOverlayLabel"></h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" id="close-icon"></button>
+            </div>
+            <div class="modal-body">
+                <p class="modal-descr"></p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary modal-close" data-bs-dismiss="modal" id="close-modal-btn"></button>
+            </div>
+        </div>
     </div>
-  </body>
+</div>
+</body>
 </html>
