--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             </div>
         </section>
     </main>
-    <div class="modal fade" id="modalOverlay" tabindex="-1" aria-labelledby="modalOverlayLabel" aria-hidden="true">
+    <div class="modal fade" id="modalOverlay" tabindex="-1" role="dialog" aria-labelledby="modalOverlayLabel" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
