--- a/index.html
+++ b/index.html
@@ -42,18 +42,18 @@
             </div>
         </section>
     </main>
-    <div class="modal fade" id="modalOverlay" tabindex="-1" role="dialog" aria-labelledby="modalOverlayLabel" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="modalOverlayLabel"></h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" id="close-icon"></button>
-            </div>
-            <div class="modal-body">
-                <p class="modal-descr"></p>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary modal-close" data-bs-dismiss="modal" id="close-modal-btn"></button>
+    <div class="modal fade" id="modal" tabindex="-1" role="dialog" aria-labelledby="modal" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title"></h5>
+                    <button type="button" class="btn-close close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body text-break"></div>
+                <div class="modal-footer">
+                    <a class="btn btn-primary full-article" href="#" role="button" target="_blank" rel="noopener noreferrer"></a>
+                    <button type="button" class="btn btn-secondary btn-close" data-bs-dismiss="modal"></button>
+                </div>
             </div>
         </div>
     </div>
