--- a/index.html
+++ b/index.html
@@ -46,13 +46,13 @@
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title"></h5>
+                    <h5 class="modal-title fw-bold"></h5>
                     <button type="button" class="btn-close close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body text-break"></div>
                 <div class="modal-footer">
                     <a class="btn btn-primary full-article" href="#" role="button" target="_blank" rel="noopener noreferrer"></a>
-                    <button type="button" class="btn btn-secondary btn-close" data-bs-dismiss="modal"></button>
+                    <button type="button" class="btn btn-secondary btn-close-modal" data-bs-dismiss="modal"></button>
                 </div>
             </div>
         </div>
