--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
                 </div>
                 <div class="modal-body text-break"></div>
                 <div class="modal-footer">
-                    <a class="btn btn-primary full-article" href="#" role="button" target="_blank" rel="noopener noreferrer"></a>
-                    <button type="button" class="btn btn-secondary btn-close-modal" data-bs-dismiss="modal"></button>
+                    <a class="btn btn-primary full-article" href="#" role="button" target="_blank" rel="noopener noreferrer">Читать полностью</a>
+                    <button type="button" class="btn btn-secondary btn-close-modal" data-bs-dismiss="modal">Закрыть</button>
                 </div>
             </div>
         </div>
